Media Query Added in CSS Module

--- a/src/BlogCard.module.css
+++ b/src/BlogCard.module.css
@@ -6,3 +6,10 @@
     box-shadow: 0 2px 5px #ccc;
     background-color: lightblue;
 }
+
+@media(min-width: 992px) {
+    .box1style {
+        width: 45%;
+        display: inline-block;
+    }
+}
