Like functionality added

--- a/src/BlogCard.module.css
+++ b/src/BlogCard.module.css
@@ -5,6 +5,17 @@
     border-radius: 5px;
     box-shadow: 0 2px 5px #ccc;
     background-color: lightblue;
+    
+    font-size: 24px;
+}
+
+.box1style > button{
+    font-size: 24px;
+}
+
+.likeCount {
+    font-weight: 600;
+    font-size: 28px;
 }
 
 @media(min-width: 992px) {
